vanilla-sm2/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: vanilla-playground # optional
spec:
  mtls:
    mode: STRICT
