vanilla-sm2/external-call-through-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: external-traffic-vs
  namespace: vanilla-playground
spec:
  hosts:
  - istio-ingressgateway.istio-system.svc.cluster.local
  gateways:
    - external-traffic-gw
  http:
  - match:
    - uri:
        exact: '/'
    route:
    - destination:
        host: hello-openshift
        port:
          number: 8080
