vanilla-sm2/external-gateway-with-mtls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: external-traffic-gw
  namespace: vanilla-playground
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - '*'
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      #mode: SIMPLE
      mode: MUTUAL
      credentialName: myhttps-credential
      caCertificates: istio-system/my-ca-credential
    hosts:
    - '*'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: external-traffic-vs
  namespace: vanilla-playground
spec:
  hosts:
  #- istio-ingressgateway.istio-system.svc.cluster.local
  - '*'
  gateways:
    - external-traffic-gw
  http:
  - match:
    - uri:
        exact: '/'
    route:
    - destination:
        host: hello-openshift
        port:
          number: 8080
