vanilla-sm2/gateway-service-peer-authentication-mtls.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: external-gw
  namespace: vanilla-playground
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - '*'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: external-traffic-vs
  namespace: vanilla-playground
spec:
  hosts:
  - '*'
  gateways:
    - external-gw
  http:
  - match:
    - uri:
        exact: '/'
    route:
    - destination:
        host: hello-openshift
        port:
          number: 8080
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: vanilla-playground # optional
spec:
  mtls:
    mode: STRICT
