vanilla-sm2/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: external-traffic-gw
  namespace: vanilla-playground
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - '*'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: external-traffic-vs
  namespace: vanilla-playground
spec:
  hosts:
  - '*'
  gateways:
    - external-traffic-gw
  http:
  - match:
    - uri:
        exact: '/dani'
    route:
    - destination:
        host: hello-openshift
        port:
          number: 8080
